--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,3 +25,7 @@ a:visited {
 .wrapper {
     box-sizing: border-box;
 }
+
+#tsparticles {
+    z-index: 0;
+}
